<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            style="@style/cardview_themnhanvien">
            <EditText
                android:id="@+id/edtTenNhanVien"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tennhanvien"
                android:background="#00000000"
                android:padding="10dp"></EditText>
            <View
                style="@style/view"></View>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardview_themnhanvien">
            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sodienthoai"
                android:background="#00000000"
                android:padding="10dp"></EditText>
            <View
                style="@style/view"></View>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/folding_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <FrameLayout
                android:id="@+id/cell_content_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:text="@string/catoi" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cell_title_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/catoi" />
            </FrameLayout>
        </com.ramotion.foldingcell.FoldingCell>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkcongviecBep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quanlynhanvien" />

                <CheckBox
                    android:id="@+id/checkcongviecOder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quanlysanpham"
                    />

                <CheckBox
                    android:id="@+id/checkcongviecThuchi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thuchi" />

                <CheckBox
                    android:id="@+id/checkcongviecQuanlynhanvien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oder" />

                <CheckBox
                    android:id="@+id/checkcongviecQuanlysanpham"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bep" />
            </LinearLayout>
    </LinearLayout>

</LinearLayout>