<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".function.Account.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/forget_password2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="logo_welcome" />

        <TextView
            android:id="@+id/sloganText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/armata"
            android:textSize="18sp"
            android:transitionName="logo_signin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:boxStrokeColor="@color/vang"
                    android:transitionName="edt_username">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_resetpass"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttom_bg"
            android:text="@string/reset_password"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="button_sign" />
    </LinearLayout>

</LinearLayout>